Добавлена проверка ролей пользователей, написан UserController для управления пользователями админами, исправлен BookingServiceTest для поддержки ролей